--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'Yelstream Topp Execution Project'
 
 include 'Topp-Execution-Core-Library'
 include 'Topp-Execution-Furnace-Library'
+include 'Topp-Execution-CDI-Library'
