--- a/Topp-Execution-Furnace-Library/custom.properties
+++ b/Topp-Execution-Furnace-Library/custom.properties
@@ -1,19 +1,19 @@
 #publishing.publication.groupId =
-publishing.publication.artifactId = topp-tiny-base-utility
+publishing.publication.artifactId = topp-execution-furnace
 #publishing.publication.version =
 
-publishing.publication.name = Topp-Tiny-Base
-publishing.publication.description = Topp Tiny Base is an open-source Java library which implements Java utilities related to module java.base.
-publishing.publication.url = https://github.com/sabroe/Topp-Tiny
-publishing.publication.inception-year = 2022
+publishing.publication.name = Topp-Execution-Furnace
+publishing.publication.description = Topp Execution Furnace addressing interaction with traditional Reactive Programming frameworks.
+publishing.publication.url = https://github.com/sabroe/Topp-Execution
+publishing.publication.inception-year = 2024
 
 publishing.publication.licenses.license-1.name = Apache License 2.0
-publishing.publication.licenses.license-1.url = https://github.com/sabroe/Topp-Tiny/blob/main/LICENSE
+publishing.publication.licenses.license-1.url = https://github.com/sabroe/Topp-Execution/blob/main/LICENSE
 
 publishing.publication.developers.developer-1.id = sabroe
 publishing.publication.developers.developer-1.name = Morten Sabroe Mortensen
 publishing.publication.developers.developer-1.email = morten.sabroe.mortensen@gmail.com
 
-publishing.publication.scm.connection = scm:git:git:github.com:sabroe/Topp-Tiny.git
-publishing.publication.scm.developer-connection = scm:git:ssh://github.com:sabroe/Topp-Tiny.git
-publishing.publication.scm.url = https://github.com/sabroe/Topp-Tiny
+publishing.publication.scm.connection = scm:git:git:github.com:sabroe/Topp-Execution.git
+publishing.publication.scm.developer-connection = scm:git:ssh://github.com:sabroe/Topp-Execution.git
+publishing.publication.scm.url = https://github.com/sabroe/Topp-Execution
