--- a/Topp-Execution-Injection-Library/custom.properties
+++ b/Topp-Execution-Injection-Library/custom.properties
@@ -1,9 +1,9 @@
 #publishing.publication.groupId =
-publishing.publication.artifactId = topp-execution-core
+publishing.publication.artifactId = topp-execution-injection
 #publishing.publication.version =
 
-publishing.publication.name = Topp-Execution-Core
-publishing.publication.description = Topp Execution Core addressing basics related to threads, concurrency, basic asynchronous computation.
+publishing.publication.name = Topp-Execution-Injection
+publishing.publication.description = Topp Execution Injection addressing interoperability with Jakarta CDI.
 publishing.publication.url = https://github.com/sabroe/Topp-Execution
 publishing.publication.inception-year = 2024
 
