--- a/custom.properties
+++ b/custom.properties
@@ -4,8 +4,8 @@ java.language-version = 21
 java.compiler.default-args = -Xlint:rawtypes -Xlint:unchecked -Xlint:deprecation -Werror -implicit:none
 #java.compiler.module-specific-args = -Xlint:-requires-transitive-automatic
 
-#project.group = io.github.sabroe.topp-aurora
-project.group = com.yelstream.topp-aurora
+#project.group = io.github.sabroe.topp-execution
+project.group = com.yelstream.topp-execution
 project.version = 0.0.1
 
 implementation.title =
