Modified readme files.

--- a/Topp-Execution-Furnace-Library/build.gradle
+++ b/Topp-Execution-Furnace-Library/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.11'
     implementation 'org.slf4j:slf4j-ext:2.0.11'
 
+    api project(':Topp-Execution-Core-Library')
+
     implementation 'io.smallrye.reactive:mutiny:2.5.8'
 
     testImplementation 'org.slf4j:slf4j-simple:2.0.11'
