--- a/Topp-Execution-Injection-Library/build.gradle
+++ b/Topp-Execution-Injection-Library/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.11'
     implementation 'org.slf4j:slf4j-ext:2.0.11'
 
+    api project(':Topp-Execution-Core-Library')
+
 //    implementation 'io.smallrye.reactive:mutiny:2.5.8'
 
     implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
