--- a/Topp-Execution-Injection-Library/build.gradle
+++ b/Topp-Execution-Injection-Library/build.gradle
@@ -15,15 +15,73 @@ dependencies {
 
     api project(':Topp-Execution-Core-Library')
 
-//    implementation 'io.smallrye.reactive:mutiny:2.5.8'
+//    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
+    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.1.0.RC1'
 
-    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
-//    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.11'
+    testImplementation 'org.jboss.weld.se:weld-se-core:6.0.0.Beta1'  //Feb 26, 2024
+}
 
-//    implementation 'io.smallrye:jandex:3.1.6'
 
-//    testImplementation 'org.slf4j:slf4j-simple:2.0.11'
+task printSourceSetInformation(){
+    doLast{
+        sourceSets.each { srcSet ->
+            println "["+srcSet.name+"]"
+            print "-->Source directories: "+srcSet.getAllSource().srcDirs+"\n"
 
-    testImplementation 'org.jboss.weld.se:weld-se-core:5.1.2.Final'
-    testImplementation 'org.jboss.weld.se:weld-se-core:6.0.0.Alpha1'
+
+            print "-->Source directories: "+srcSet.allJava.srcDirs+"\n"
+            print "-->Output directories: "+srcSet.output.classesDirs.files+"\n"
+
+            print "-->Compile classpath: \n"
+            srcSet.compileClasspath.files.each {
+                print "  "+it.path+"\n"
+            }
+            println ""
+
+            print "-->Runtime classpath: \n"
+            srcSet.runtimeClasspath.files.each {
+                print "  "+it.path+"\n"
+            }
+            println ""
+
+            print "-->Resource files: \n"
+            srcSet.resources.files.each {
+                print "  "+it.path+"\n"
+            }
+            println ""
+
+//            print sourceSets.main.resources.srcDirs
+
+//            println ""
+//            println ""
+        }
+    }
+}
+
+sourceSets{
+    test {
+        resources {
+//            compileClasspath += sourceSets.main.resources
+            runtimeClasspath += sourceSets.main.resources
+//            runtimeClasspath += file("$rootDir/src/main/resources")
+//            srcDirs+=["$rootDir/src/main/resources"]
+//            resources+=sourceSets.main.resources
+//            srcDresources.sourceDirectories+=sourceSets.main.resources
+            srcDirs+=sourceSets.main.resources.srcDirs
+            srcDirs+=["$rootDir/src/main/resources"]
+        }
+    }
+}
+
+/* */
+tasks.register('copyResources', Copy) {
+    from "${projectDir}/src/main/resources"
+    into "${buildDir}/classes/java/main"
+}
+processResources.dependsOn copyResources
+/* */
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
