--- a/Topp-Execution-Furnace-Library/build.gradle
+++ b/Topp-Execution-Furnace-Library/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     api project(':Topp-Execution-Core-Library')
 
+//    implementation 'io.smallrye.reactive:mutiny:2.6.0'
     implementation 'io.smallrye.reactive:mutiny:2.5.8'
 
     testImplementation 'org.slf4j:slf4j-simple:2.0.11'
