Fixed construction of verify-objects.

--- a/Topp-Execution-Core-Library/build.gradle
+++ b/Topp-Execution-Core-Library/build.gradle
@@ -10,10 +10,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
-    api 'com.yelstream.topp.standard:topp-standard-core:0.0.1'
+    api 'com.yelstream.topp.standard:topp-standard-core:0.0.2'
 
-    implementation 'org.slf4j:slf4j-api:2.0.11'
-    implementation 'org.slf4j:slf4j-ext:2.0.11'
+//    implementation 'org.slf4j:slf4j-api:2.0.12'
+//    implementation 'org.slf4j:slf4j-ext:2.0.12'
 
-    testImplementation 'org.slf4j:slf4j-simple:2.0.11'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.12'
 }
