--- a/Topp-Execution-Furnace-Library/build.gradle
+++ b/Topp-Execution-Furnace-Library/build.gradle
@@ -10,8 +10,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
-    implementation 'org.slf4j:slf4j-api:2.0.11'
-    implementation 'org.slf4j:slf4j-ext:2.0.11'
+//    implementation 'org.slf4j:slf4j-api:2.0.11'
+//    implementation 'org.slf4j:slf4j-ext:2.0.11'
 
     api project(':Topp-Execution-Core-Library')
 
