--- a/Topp-Execution-Inject-Library/custom.properties
+++ b/Topp-Execution-Inject-Library/custom.properties
@@ -1,8 +1,8 @@
 #publishing.publication.groupId =
-publishing.publication.artifactId = topp-execution-injection
+publishing.publication.artifactId = topp-execution-inject
 #publishing.publication.version =
 
-publishing.publication.name = Topp-Execution-Injection
+publishing.publication.name = Topp-Execution-Inject
 publishing.publication.description = Topp Execution Injection addressing interoperability with Jakarta CDI.
 publishing.publication.url = https://github.com/sabroe/Topp-Execution
 publishing.publication.inception-year = 2024
