Added new libraries.

--- a/Topp-Furnace-Vertx-Addressing-Library/custom.properties
+++ b/Topp-Furnace-Vertx-Addressing-Library/custom.properties
@@ -18,8 +18,8 @@
 ##
 
 #publishing.publication.groupId =
-publishing.publication.artifactId = topp-furnace-mutiny
+publishing.publication.artifactId = topp-furnace-vertx-addressing
 #publishing.publication.version =
 
-publishing.publication.name = Topp-Furnace-Mutiny
-publishing.publication.description = Topp Furnace Mutiny contains utilities addressing SmallRye Mutiny.
+publishing.publication.name = Topp-Furnace-Vert.x-Addressing
+publishing.publication.description = Topp Furnace Vert.x Addressing provides higher level addressing schemes.
