--- a/Topp-Furnace-Vertx-Core-Library/custom.properties
+++ b/Topp-Furnace-Vertx-Core-Library/custom.properties
@@ -21,18 +21,5 @@
 publishing.publication.artifactId = topp-furnace-vertx-core
 #publishing.publication.version =
 
-publishing.publication.name = Topp-Furnace-Flow
+publishing.publication.name = Topp-Furnace-Vert.x-Core
 publishing.publication.description = Topp Furnace Vert.x Core contains utilities addressing Vert.x Core.
-publishing.publication.url = https://github.com/sabroe/Topp-Furnace
-publishing.publication.inception-year = 2024
-
-publishing.publication.licenses.license-1.name = Apache License 2.0
-publishing.publication.licenses.license-1.url = https://github.com/sabroe/Topp-Furnace/blob/main/LICENSE
-
-publishing.publication.developers.developer-1.id = sabroe
-publishing.publication.developers.developer-1.name = Morten Sabroe Mortensen
-publishing.publication.developers.developer-1.email = morten.sabroe.mortensen@gmail.com
-
-publishing.publication.scm.connection = scm:git:git:github.com:sabroe/Topp-Furnace.git
-publishing.publication.scm.developer-connection = scm:git:ssh://github.com:sabroe/Topp-Furnace.git
-publishing.publication.scm.url = https://github.com/sabroe/Topp-Furnace
