--- a/Topp-Furnace-Vertx-Addressing-Library/build.gradle
+++ b/Topp-Furnace-Vertx-Addressing-Library/build.gradle
@@ -17,12 +17,26 @@
  * limitations under the License.
  */
 
-rootProject.name = 'Yelstream Topp Furnace Project'
+plugins {
+    id 'java'
+    id 'java-library-distribution'
+    id 'jacoco'
+    id 'maven-publish'
+    id 'signing'
+}
 
-include 'Topp-Furnace-Execution-Library'
-include 'Topp-Furnace-Flow-Library'
-include 'Topp-Furnace-Mutiny-Library'
-include 'Topp-Furnace-Vertx-Core-Library'
-include 'Topp-Furnace-Vertx-Addressing-Library'
-include 'Topp-Furnace-Vertx-Health-Library'
-include 'Topp-Furnace-Inject-Library'
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    api 'org.slf4j:slf4j-api:2.0.13'
+    api 'org.slf4j:slf4j-ext:2.0.13'
+
+    api project(':Topp-Furnace-Execution-Library')
+
+    api 'io.vertx:vertx-core:4.5.8'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    implementation 'com.google.guava:guava:33.2.0-jre'
+
+    testImplementation 'org.slf4j:slf4j-simple:2.0.13'
+}
