--- a/Topp-Furnace-Vertx-Health-Library/custom.properties
+++ b/Topp-Furnace-Vertx-Health-Library/custom.properties
@@ -18,8 +18,8 @@
 ##
 
 #publishing.publication.groupId =
-publishing.publication.artifactId = topp-furnace-mutiny
+publishing.publication.artifactId = topp-furnace-vertx-health
 #publishing.publication.version =
 
-publishing.publication.name = Topp-Furnace-Mutiny
-publishing.publication.description = Topp Furnace Mutiny contains utilities addressing SmallRye Mutiny.
+publishing.publication.name = Topp-Furnace-Vert.x-Health
+publishing.publication.description = Topp Furnace Vert.x Health provides higher level health check mechanisms.
