--- a/module/Topp-Furnace-Reactive-Conversion-Library/build.gradle
+++ b/module/Topp-Furnace-Reactive-Conversion-Library/build.gradle
@@ -17,19 +17,26 @@
  * limitations under the License.
  */
 
-rootProject.name = 'Yelstream Topp Furnace Project'
+plugins {
+    id 'java'
+    id 'java-library-distribution'
+    id 'jacoco'
+    id 'maven-publish'
+    id 'signing'
+}
 
-include 'module:Topp-Furnace-Execution-Library'
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
-include 'module:Topp-Furnace-Flow-Library'
+    api 'org.slf4j:slf4j-api:2.0.13'
+    api 'org.slf4j:slf4j-ext:2.0.13'
 
-include 'module:Topp-Furnace-Mutiny-Library'
+    api project(':module:Topp-Furnace-Execution-Library')
 
-include 'module:Topp-Furnace-Vertx-Core-Library'
-include 'module:Topp-Furnace-Vertx-Addressing-Library'
-include 'module:Topp-Furnace-Vertx-Lifecycle-Library'
-include 'module:Topp-Furnace-Vertx-Health-Library'
+    api 'io.vertx:vertx-core:4.5.8'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    implementation 'com.google.guava:guava:33.2.0-jre'
 
-include 'module:Topp-Furnace-Reactive-Unification-Library'
-
-include 'module:Topp-Furnace-Inject-Library'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.13'
+}
