Conversion to and from completable-future instances.

--- a/module/Topp-Furnace-Reactive-Integration-For-Reactive-X-Library/build.gradle
+++ b/module/Topp-Furnace-Reactive-Integration-For-Reactive-X-Library/build.gradle
@@ -17,13 +17,24 @@
  * limitations under the License.
  */
 
-/**
- * Topp Furnace Reactive Unification provides interactions between selected reactive frameworks.
- */
-module com.yelstream.topp.furnace.reactive.integration.reactivestream {
-    requires static lombok;
-    requires java.base;
-    requires org.slf4j;
-    requires org.reactivestreams;
-    exports com.yelstream.topp.furnace.reactive.integration.reactivestreams;
+plugins {
+    id 'java'
+    id 'java-library-distribution'
+    id 'jacoco'
+    id 'maven-publish'
+    id 'signing'
+}
+
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    api 'org.slf4j:slf4j-api:2.0.13'
+    api 'org.slf4j:slf4j-ext:2.0.13'
+
+    api project(':module:Topp-Furnace-Execution-Library')
+    api project(':module:Topp-Furnace-Reactive-Integration-Library')
+    api 'io.reactivex.rxjava3:rxjava:3.1.8'
+
+    testImplementation 'org.slf4j:slf4j-simple:2.0.13'
 }
