--- a/gradle/fragment/java-jars.gradle
+++ b/gradle/fragment/java-jars.gradle
@@ -22,4 +22,8 @@ plugins.withType(JavaPlugin) {
         withJavadocJar()
         withSourcesJar()
     }
+
+    sourcesJar {
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    }
 }
