--- a/gradle/fragment/publish.gradle
+++ b/gradle/fragment/publish.gradle
@@ -20,8 +20,6 @@
 /*
  * Note:
  *     To publish, run the task 'publish'.
- *     To approve the publishing using the Nexus Repository Manager, access https://s01.oss.sonatype.org/#stagingRepositories.
- *     To verify the first stages of approval, access https://repo1.maven.org/maven2/io/github/sabroe/topp/.
  */
 
 plugins.withType(MavenPublishPlugin) {
@@ -67,11 +65,35 @@ plugins.withType(MavenPublishPlugin) {
 
         repositories {
             maven {
+                /*
+                 * Note:
+                 *     Setup applicable for the global GitHub located on "github.com".
+                 *     To approve the publishing using the Nexus Repository Manager, access --
+                 *         https://s01.oss.sonatype.org/#stagingRepositories
+                 *     To verify the first stages of approval, access --
+                 *         https://repo1.maven.org/maven2/com/yelstream/topp/
+                 *         https://repo1.maven.org/maven2/io/github/sabroe/topp/
+                 */
                 name = 'OSSRH'
                 url = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
                 credentials {
                     username = project.properties['ossrhUsername']
                     password = project.properties['ossrhPassword']
+                }
+            }
+            maven {
+                /*
+                 * Note:
+                 *     Example set for a local, company-specific GitLab instance.
+                 *     This shows how to apply different URLs depending upon a special version suffix.
+                 */
+                name = 'BG'
+                def snapshotUrl = 'https://nexus.beumer.com/repository/maven-snapshots/'
+                def releaseUrl = 'https://nexus.beumer.com/repository/maven-releases/'
+                url = version.endsWith('SNAPSHOT') ? snapshotUrl : releaseUrl
+                credentials {
+                    username = project.properties['bgUsername']
+                    password = project.properties['bgPassword']
                 }
             }
         }
