--- a/gradle/fragment/cyclonedx.gradle
+++ b/gradle/fragment/cyclonedx.gradle
@@ -17,15 +17,29 @@
  * limitations under the License.
  */
 
-plugins.withType(JacocoPlugin) {
-    jacoco {
-        toolVersion = "0.8.11"
-//          reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
-    }
-    test {
-        finalizedBy jacocoTestReport // report is always generated after tests run
-    }
-    jacocoTestReport {
-        dependsOn test // tests are required to run before generating the report
+/*
+ * Note:
+ *     To inspect the content of build BOM files, consider this command for ad hoc inspection:
+ *     find . -name bom.* | grep -E "(.*)/build/reports/(.*)(bom.xml|bom.json)" | while read r; do echo; echo $r; head -n30 $r; done | less
+ */
+
+tasks.withType(JavaCompile) {
+    apply plugin: 'org.cyclonedx.bom'
+
+    cyclonedxBom {
+        includeConfigs = ["runtimeClasspath"]
+
+        skipConfigs = ["compileClasspath", "testCompileClasspath"]
+
+        skipProjects = [rootProject.name]
+
+//        projectType = "application"
+        projectType = "library"
+
+        destination = file("build/reports/cyclonedx")
+
+        outputName = "bom"
+
+        outputFormat = "all"
     }
 }
