--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,8 @@ rootProject.name = 'Yelstream Topp Furnace Project'
 
 include 'module:Topp-Furnace-Execution-Library'
 
+include 'module:Topp-Furnace-Management-Library'  //TO-DO: Consider "...-Lifecycle-Management-..."!
+
 include 'module:Topp-Furnace-Flow-Library'
 
 include 'module:Topp-Furnace-Mutiny-Library'
