--- a/module/Topp-Furnace-Vertx-Core-Lifecycle-Management-Library/build.gradle
+++ b/module/Topp-Furnace-Vertx-Core-Lifecycle-Management-Library/build.gradle
@@ -33,8 +33,9 @@ dependencies {
     api 'org.slf4j:slf4j-ext:2.0.13'
 
     api project(':module:Topp-Furnace-Execution-Library')
+    api project(':module:Topp-Furnace-Vertx-Core-Library')
+    api project(':module:Topp-Furnace-Lifecycle-Management-Library')
 
-    api 'io.vertx:vertx-core:4.5.9'
     api 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
     implementation 'com.google.guava:guava:33.2.0-jre'
 
